# brush

./: .env.example  .gitignore  Cargo.toml  README.md  android_build_audit.md  brush_repository_knowledge_base.md  contributions.md  implementation_plan.md  task.md
.cargo/: config.toml
brush_nextjs/: package.json
crates/brush-app/: Cargo.toml  build.gradle
crates/brush-app/app/: build.gradle
crates/brush-app/app/src/main/java/com/splats/app/: FilePicker.java  MainActivity.java  VideoFrameExtractor.java
crates/brush-app/app/src/main/java/com/splats/app/sfm/: BundleAdjustmentLib.kt  OpenCvFrontendLib.kt  TelemetrySparseReconstruction.java
crates/brush-app/app/src/main/java/com/splats/app/telemetry/: ActivityCoroutineScope.kt  CsvIngestParser.kt  CsvParseBench.kt  DiagnosticReporter.kt  EnuConverter.kt  GapInterpolator.kt  ImuIntegrator.kt  Interpolator.kt  KeyframePlanner.kt  KeyframeSelector.kt  Models.kt  PoseStampEmitter.kt  QualityFlagger.kt  RowValidator.kt  TelemetryError.kt  TelemetryPreprocessor.kt  VideoStartTime.kt  VideoTimeExtractor.kt
crates/brush-app/app/src/test/java/com/splats/app/telemetry/: TelemetryPipelineTest.kt
crates/brush-app/src/: android.rs
crates/brush-dataset/src/: config.rs
crates/brush-process/: Cargo.toml  build.rs
crates/brush-process/src/: config.rs  lib.rs
crates/brush-process/src/sfm/: mod.rs  stage_3_1_feature_extraction.rs  stage_3_2_matching.rs  stage_3_3_ransac.rs  stage_3_4_pose_recovery.rs  stage_3_5_triangulation.rs  stage_3_6_inlier_filtering.rs  stage_3_7_bundle_adjustment.rs  stage_3_8_pose_export.rs
crates/brush-sfm/: Cargo.toml  build.rs
crates/brush-sfm/src/: lib.rs
crates/brush-sfm/src/sfm/: mod.rs  stage_3_7_bundle_adjustment.rs
crates/brush-train/src/: config.rs
crates/brush-ui/: Cargo.toml
crates/brush-ui/src/: app.rs  lib.rs  panels.rs  scene.rs  settings_popup.rs  ui_process.rs
crates/brush-vfs/src/: data_source.rs  lib.rs
crates/rrfd/: Cargo.toml
crates/rrfd/src/: android.rs  lib.rs
samples/: example_scene.ply
