
[package]
name = "brush-process"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true
description = "SfM pipeline (Stage 3.1–3.8) + Rust-native Bundle Adjustment"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["jni-support"]
jni-support = ["jni"]
debug-validation = ["brush-train/debug-validation"]
training = ["dep:brush-train", "dep:brush-dataset", "dep:brush-rerun", "brush-serde/export"]

[dependencies]
brush-render.path = "../brush-render"
brush-vfs.path = "../brush-vfs"
brush-serde.path = "../brush-serde"
brush-sfm.path = "../brush-sfm"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
jni = { version = "0.21", optional = true }

burn.workspace = true
burn-cubecl.workspace = true
burn-wgpu.workspace = true

alphanumeric-sort.workspace = true
anyhow.workspace = true
async-fn-stream.workspace = true

clap.workspace = true
rand.workspace = true
log.workspace = true
glam.workspace = true
web-time.workspace = true
tracing.workspace = true

serde.workspace = true
serde_json.workspace = true

wgpu.workspace = true

tokio = { workspace = true, features = ["io-util", "rt"] }
tokio-stream.workspace = true
tokio_with_wasm.workspace = true

brush-train = { path = "../brush-train", optional = true }
brush-dataset = { path = "../brush-dataset", optional = true }
brush-rerun = { path = "../brush-rerun", optional = true }

[lints]
workspace = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
